# hw_first_web_server

./: README.md  main.py  pyproject.toml
templates/: catalogue.html  category.html  contacts.html  index.html
