[tool.poetry]
name = "hw-first-web-server"
version = "0.1.0"
description = ""
authors = ["Dmitrii <dima12sik@yandex.ru>"]
readme = "README.md"
packages = [{include = "hw_first_web_server"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
